feat(registry): add input password component
